--- a/src/cpp_publisher/package.xml
+++ b/src/cpp_publisher/package.xml
@@ -3,11 +3,14 @@
 <package format="3">
   <name>cpp_publisher</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>Package cpp</description>
   <maintainer email="michelfarahh7@gmail.com">michel</maintainer>
-  <license>TODO: License declaration</license>
+  <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+
+  <depend>rclcpp</depend>
+<depend>std_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
