--- a/src/py_subscriber/package.xml
+++ b/src/py_subscriber/package.xml
@@ -3,9 +3,12 @@
 <package format="3">
   <name>py_subscriber</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>Package pyth</description>
   <maintainer email="michelfarahh7@gmail.com">michel</maintainer>
-  <license>TODO: License declaration</license>
+  <license>Apache License 2.0</license>
+
+  <exec_depend>rclpy</exec_depend>
+<exec_depend>std_msgs</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
